--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,8 +1,65 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
+/* 
+- https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+- https://css-tricks.com/snippets/css/complete-guide-grid/
+*/
+
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  border: none;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+  color: white;
+  background: #1C2A34;
+}
+
+.container {
+  max-width: 769px;
+  margin-inline: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
+}
+
+.navbar {
+  width: 100%;
+  justify-content: space-between;
+  display: flex;
   margin-top: 60px;
+  align-items: baseline;
+}
+
+.brand {
+  font-size: x-large;
+}
+
+.navbar-items-list {
+  display: flex;
+  gap: 20px;
+}
+
+.navbar-item {
+  display: block;
+  padding: 5px 15px;
+  color: #fff;
+  border-radius: 5px;
+  text-decoration: none;
+  /* 
+  padding-top: 4px;
+  padding-bottom: 5px;
+  padding-left: 15px;
+  padding-right: 15px; */
+}
+
+.navbar-item:hover {
+  background-color: #ffffff0e;
+}
+
+.main-action {
+  border: 2px solid rgba(124, 201, 255, 0.41);
+}
+
+.main-section {
+  margin-top: 100px;
 }
